--- a/homepage.html
+++ b/homepage.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Splash screen</title>
+    <title>MetaTuners</title>
 
     <!-- font awsome cdn -->
     <link
@@ -56,6 +56,13 @@
 
     <!-- footer styles -->
     <link rel="stylesheet" href="./css/footer.css" />
+
+    <!-- fav ico -->
+    <link
+      rel="shortcut icon"
+      href="./img/SPLASH PAGE/favicon.ico"
+      type="image/x-icon"
+    />
 
     <!--  navbar js -->
     <script src="./js/app.js" defer></script>
@@ -155,35 +162,41 @@
           </h2>
 
           <p class="welcome-section-desc fade-in welcome-section-desc-desktop">
-            The tuner scene is under attack. There is an ever increasing trend
-            of modified cars being crushed, car meetups disbanded, and racing
-            getting punished harder than ever. At the same time, “The Machine”
-            continues to seek more and more power. Under the guise of
-            convenience, it continues to “steer” the masses into riding
-            autonomous vehicles. In actuality, it’s just an attempt to take away
-            more freedoms; having people take a “backseat” to their own lives.
-            The Meta Tuners are an underground resistance who are “attuned” to
-            the true intentions of The Machine, outwardly defying its plans by
-            staying true to themselves, remaining in the fast lane, and most
-            importantly, staying in the driver’s seat.
+            An invisible threat looms. A once progressive and highly advanced
+            metropolis, Hardrive City, is seeing its rich culture and freedoms
+            siphoned off to a higher power. With autonomous vehicles taking over
+            the city, racetracks became junkyards, meetups became sting
+            operations, and tuners are being driven away from among society. A
+            highly advanced AI known as “The Machine”, seeks to gain power
+            through greed and corruption and grows more powerful as his plague
+            spreads across the region.
+            <br />
+            <br />
+            The Meta Tuners are specially attuned to The Machine’s plans, and
+            ready to move against the corrupted AI threatening the world. Tuners
+            around the world are ready to mobilize, and restore the Hardrive
+            City its former glory.
           </p>
 
           <p class="welcome-section-desc welcome-section-desc-mobile fade-in">
-            The tuner scene is under attack. There is an ever increasing trend
-            of modified cars being crushed, car meetups disbanded, and racing
-            getting punished harder than ever.
+            An invisible threat looms. A once progressive and highly advanced
+            metropolis, Hardrive City, is seeing its rich culture and freedoms
+            siphoned off to a higher power. With autonomous
           </p>
           <span class="read-more">... Read More</span>
 
           <span class="read-more-text fade-in">
-            At the same time, “The Machine” continues to seek more and more
-            power. Under the guise of convenience, it continues to “steer” the
-            masses into riding autonomous vehicles. In actuality, it’s just an
-            attempt to take away more freedoms; having people take a “backseat”
-            to their own lives. The Meta Tuners are an underground resistance
-            who are “attuned” to the true intentions of The Machine, outwardly
-            defying its plans by staying true to themselves, remaining in the
-            fast lane, and most importantly, staying in the driver’s seat.
+            vehicles taking over the city, racetracks became junkyards, meetups
+            became sting operations, and tuners are being driven away from among
+            society. A highly advanced AI known as “The Machine”, seeks to gain
+            power through greed and corruption and grows more powerful as his
+            plague spreads across the region.
+            <br />
+            <br />
+            The Meta Tuners are specially attuned to The Machine’s plans, and
+            ready to move against the corrupted AI threatening the world. Tuners
+            around the world are ready to mobilize, and restore the Hardrive
+            City its former glory.
           </span>
 
           <a href="#" class="welcome-section-link fade-in"
@@ -204,8 +217,8 @@
           </div>
 
           <p class="welcome-section-desc fade-in">
-            Our mint date will be announced soon. Please check Twitter and
-            Discord for the official announcement.
+            Mint date will be announced soon. Please check twitter AND discord
+            for our official announcement!
           </p>
         </div>
         <div class="welcome-section-left-col">
@@ -226,9 +239,8 @@
             />
 
             <p class="alert-desc">
-              *Note: 100 NFTs will be withheld from the mint. These will be used
-              for community giveaways, marketing, easter eggs, rewards and the
-              founding teams' Meta Tuners memberships.
+              Note: 100 NFT’s will be reserved from mint for marketing,
+              community rewards, and the founding teams Meta Tuner memberships
             </p>
           </div>
         </div>
@@ -247,14 +259,16 @@
           the collection
         </h2>
         <p class="collection-desc fade-in">
-          The Meta Tuners Genesis collection is an algorithmacally generated
-          8,000 piece collection consisting of 80 legendary car inspired PFP
-          characters, spanning across JDM, euro, muscle and exotic factions with
-          over 400 hand drawn traits.
+          The Meta Tuners Genesis collection features 80 unique car inspired PFP
+          characters. The 8,000 piece collection is algorithmically generated
+          and includes 400 hand-drawn vehicles from JDM, Euro, Muscle, Exotic
+          and more!
+
           <br />
           <br />
-          The tuners will reside in an ERC 721-A contract on the ethereum
-          blockchain and hosted on IPFS. Minting a Tuner will cost 0.08 ETH.
+          The Meta Tuners will be hosted on IPFS and live in an ERC 721-A
+          contract on the Ethereum blockchain. You can mint yours at a cost of
+          0.08 ETH!
         </p>
       </div>
 
@@ -282,11 +296,10 @@
               <h2 class="slider-item-title">jdm</h2>
               <h3 class="slider-item-subtitle">"The imposters"</h3>
               <p class="slider-item-desc">
-                It’s been 50 years since the conception of the JDM Tuner scene.
-                This group formed the early stages of drifting, modifying and
-                racing. Now, the elicit street racers go under cover during the
-                day, importing car parts from all over the world, equipping the
-                Resistance for the battle against The Machine.
+                Since the early 1980’s, the JDM Tuners were formed around the
+                emerging culture of drifting, modding, and street racing. Now,
+                the tuners are forced to operate undercover, as they illicitly
+                mod tuners around the world to stop The Machine
               </p>
               <h2 class="slider-item-info">Info</h2>
               <ul class="slider-item-links">
@@ -329,12 +342,10 @@
               <h2 class="slider-item-title">EXOTIC</h2>
               <h3 class="slider-item-subtitle">"The Widowmakers"</h3>
               <p class="slider-item-desc">
-                Coined “The Widowmakes” by the scene due to their insanely fast
-                horsepower numbers and expensive gear. The Exotics play by their
-                own rules. Exotics are amongst the most influential Tuners in
-                Hardrive City. While some Exotic Tuners use their HP and clout
-                to assist the Resistance, others use it for self-seeking
-                missions within the city.
+                With their insanely high horsepower and expensive lifestyles,
+                The Widowmakers quickly lived up to their name. Using their
+                celebrity status and sociopolitical influence, they play a
+                integral role in resisting The Machine.
               </p>
               <h2 class="slider-item-info">Info</h2>
               <ul class="slider-item-links">
@@ -377,12 +388,11 @@
               <h2 class="slider-item-title">MUSCLE</h2>
               <h3 class="slider-item-subtitle">"The GearHeads"</h3>
               <p class="slider-item-desc">
-                Through their heritage of naturally aspirated technology and
-                internal combustion engines; The Muscle Tuners supply the
-                Resistance with the much needed power to fight off the Machine.
-                With their traditional tuning methods, the Muscle Tuners are not
-                as easily affected by electrical and malware attacks caused by
-                the Machine.
+                The Muscle Tuners are inherently geared to supply the resistance
+                with much needed raw power. Their traditional tuning methods and
+                high-combustion engines make them especially resistant to
+                electrical and cyber-attacks, making them a dominant force
+                against The Machine.
               </p>
               <h2 class="slider-item-info">Info</h2>
               <ul class="slider-item-links">
@@ -425,11 +435,11 @@
               <h2 class="slider-item-title">EURO</h2>
               <h3 class="slider-item-subtitle">"The Engineers"</h3>
               <p class="slider-item-desc">
-                Known for their high performance and engineering skills, the
-                Euro Tuners use their expertise to equip the Resistance with
-                cutting edge technology. Euro Tuners have also been syphoning
-                car-tech intel from deep within The Machines vaults in Hardrive
-                City.
+                Using their expertise in high performance and engineering, the
+                Euro Tuners fight alongside the resistance with cutting edge
+                technology and advanced programming. Siphoning intel from deep
+                within the Hardrive City’s data vaults, they have unique insight
+                to the inner workings of The Machine’s attacks.
               </p>
               <h2 class="slider-item-info">Info</h2>
               <ul class="slider-item-links">
@@ -565,11 +575,12 @@
               NFT UTILITIES
             </h2>
             <p class="utilities-top-desc fade-in">
-              As the battle against the Machine rages on, your Meta Tuner
-              Genesis NFTs will act as your membership token to the Resistance
-              and also gives you many aditional points of value.
+              As the battle against The Machine rages on, your Meta Tuner
+              Genesis NFTs will act as your membership token to the Resistance,
+              giving you access to unique rewards and experiences.
             </p>
           </div>
+
           <img
             src="./img/UTILITIES/KEY_Infinite_loop.gif"
             alt=""
@@ -594,8 +605,8 @@
             <img src="./img/UTILITIES/Icon2.png" alt="" class="utility-icon" />
             <h3 class="utility-title">2. Usage</h3>
             <p class="utility-text">
-              8,000 Unique Meta Tuners is your digital key to firing up your
-              engine for cruising and entering Hardrive City.
+              Your Meta Tuner NFT is your digital key to accessing the Meta
+              Tuners universe and entering Hardrive City.
             </p>
           </div>
 
@@ -793,14 +804,14 @@
     <!-- contact section start -->
     <section id="contact-us" class="contact">
       <div class="container contact-us-section">
-        <div class="contact-us-logo fade-in">
+        <div class="contact-us-logo">
           <img
             src="./img/SPLASH PAGE/MetaTuners_M.png"
             alt=""
-            class="contact-us-logo-img"
+            class="contact-us-logo-img fade-in"
           />
         </div>
-        <h2 class="section-title contact-us-section-title">
+        <h2 class="section-title contact-us-section-title fade-in">
           ARE YOU READY TO TAKE THE WHEEL?
         </h2>
 
@@ -837,7 +848,8 @@
     <section class="gallery" id="gallery">
       <div class="container gallery-section">
         <h2 class="section-title gallery-section-title fade-in">
-          Tuner <span class="blue-clr">Art</span>
+          <!-- Tuner <span class="blue-clr">Art</span> -->
+          THE SHOWROOM (GALLERY)
         </h2>
 
         <div class="gallery-main fade-in">
