--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Splash screen</title>
+    <title>MetaTuners</title>
 
     <!-- font awsome cdn -->
     <link
@@ -29,6 +29,13 @@
 
     <!-- footer styles -->
     <link rel="stylesheet" href="./css/footer.css" />
+
+    <!-- fav ico -->
+    <link
+      rel="shortcut icon"
+      href="./img/SPLASH PAGE/favicon.ico"
+      type="image/x-icon"
+    />
 
     <!-- preloader js -->
     <script src="./js/preLoader.js" defer></script>
@@ -82,9 +89,9 @@
         </div>
 
         <p class="splash-desc">
-          join the meta tuners resistance as we battle against the machine. we
-          are the world's first car culture inspired exclusive NFT collection
-          where the token doubles as your membership into hardrive city.
+          Join the Meta Tuners and resist against The Machine’s efforts to
+          destroy tuner culture in Hardrive City. Secure your token and join the
+          ranks of the World’s First Car-Culture Inspired NFT Collection
         </p>
       </div>
     </section>
